--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,10 @@
 {
-  "include": [
-    "*.js",
-    "libraries/*.js",
-    "c:\\Users\\SL\\.vscode\\extensions\\samplavigne.p5-vscode-1.2.7\\p5types\\global.d.ts"
-  ]
+    "include": [
+        "dist/**/*.js",
+        "node_modules/@types/p5/global.d.ts"
+    ],
+    "compilerOptions": {
+        "checkJs": true,
+        "strict": true
+    },
 }
